feat: add detokenize api, updates to reactors, proxy, 3ds and more
